--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,5 +3,6 @@
 # file/directory       user
 #
 
+dir/                   @aneesahammed
 dir/file.txt           @aneesahammed
 sample.json            @hackmonmon
